fixed section alignment

--- a/css/second-section.css
+++ b/css/second-section.css
@@ -1,6 +1,6 @@
 #content {
   text-align: center;
-  height: 600px;
+  height: 650px;
   width: 100%;
   font-family: 'Karla', sans-serif;
   background-color: rgba(220, 220, 220, .5);
